@@ -117,6 +117,7 @@ setup(name='karl',
       startover = karl.scripts.startover:main
       echo_log = karl.scripts.echo_log:main
       mailout = karl.scripts.mailout:main
+      rename_user = karl.scripts.rename_user:main
       reset_security_workflows = karl.scripts.reset_security_workflows:main
       use_pgtextindex = karl.scripts.use_pgtextindex:main
       site_announce = karl.scripts.site_announce:main
